Upgrade to Java 21 & dependencies update